Second_Step/data/45/220/compilation.txt
Tools.java:18: error: cannot find symbol
                    echange(tab,tab[i],tab[i+1]);
                    ^
  symbol:   method echange(int[],int,int)
  location: class Tools
1 error
./Tools.java:18: error: cannot find symbol
                    echange(tab,tab[i],tab[i+1]);
                    ^
  symbol:   method echange(int[],int,int)
  location: class Tools
1 error
